# owl-stock-pipeline

./: .gitignore  README.md  design.md  diagram.drawio  makefile  pipeline.py  pyproject.toml  queries.py  schema.sql
data/: stock-data-se-owl-part2.xlsx  stock-data-se-owl.xlsx
tests/: test_pipeline.py
