[project]
name = "owl-stock-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "fastexcel>=0.20.2",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
]
